# deck-of-dragons

./: .env.example  .gitignore  CLASSIFIER_APPROACH.md  CLAUDE.md  IMPLEMENTATION.md  PIPELINE.md  README.md  main.py  pyproject.toml  requirements-deploy.txt
.github/workflows/: daily_reading.yml
docs/: app.js  index.html  reading.json  style.css
scripts/: ai_review_reading.py  fetch_training_batch.py  generate_reading.py  init_db.py  setup.py
src/: __init__.py  feedback.py  pipeline.py
src/bootstrap/: label.py
src/classify/: house.py  reversal.py  title.py
src/fetch/: gdelt.py  guardian.py  http.py  nyt.py  sources.py  worldnews.py
src/train/: train.py
src/ui/: app.py  cards.py
